--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ align-items: center;
     min-height: 100vh;
 }
 .main-content{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 .bill-container{
     display: flex;
@@ -37,7 +38,6 @@ align-items: center;
     text-align: center;
     font-size: 20px;
     border: 1px solid #777;
-    width: 342px;
     font-weight: 600;
 }
 .list-items{
@@ -63,7 +63,7 @@ align-items: center;
     place-items: center;
 }
 .calculation-block{
-    width: 450px;
+    width: 339px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -94,6 +94,10 @@ justify-content: space-evenly;
 }
 #duedate,
 #Dcode,
-#finaltotal{
+#finaltotal,
+#BillDiscount{
+    font-weight: 600;
+}
+.text-bold{
     font-weight: 600;
 }
