--- a/queries.css
+++ b/queries.css
@@ -7,6 +7,9 @@
         margin-top: 30px;
         margin-bottom: 30px;
     }
+    .calculation-block{
+        margin-top: 20px;
+    }
 }
 @media(max-width:720px){
     .main-content{
