--- a/style.css
+++ b/style.css
@@ -17,17 +17,13 @@ align-items: center;
 .bill-container{
     display: flex;
     flex-direction: column;
-    max-width: 337px;
+    max-width: 339px;
 }
 .bill-head,
 .color-blue{
     text-transform: uppercase;
     background-color: rgb(176 232 254);
     color: rgb(119 135 168);
-}
-.bill-head{
-    padding-block: 8px;
-    width: 337px;
 }
 .color-coral{
     background-color: rgb(252 176 187);
@@ -40,9 +36,11 @@ align-items: center;
     font-size: 20px;
     border: 1px solid #777;
     font-weight: 600;
+    padding-block: 8px;
+    width: 337px;
 }
 .list-items{
-    width: 166.5px;
+    width: 168px;
     text-align: center;
     display: flex;
     font-size: 14px;
@@ -64,10 +62,11 @@ align-items: center;
     place-items: center;
 }
 .calculation-block{
-    width: 337px;
+    width: 339px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-top: 20px;
 }
 .calculation-upper-area,
 .calculation-lower-area{
