--- a/queries.css
+++ b/queries.css
@@ -18,17 +18,24 @@
         flex-direction: column;
         align-items: center;
         gap: 20px;
+        padding-left: 10%;
     }
     .calculation-block {
         width: 400px;
     }
 }
 @media(max-width:325px){
+    .main-content{
+        padding-left: 0;
+    }
     .bill-container {
         max-width: 300px;
     }
     .list-items{
         width: 145px;
+    }
+    .bill-head {
+        width: 293px;
     }
     .calculation-block {
         width: 310px;
